# Detection-Application

./: .gitignore  CMakeLists.txt  README.md  res.qrc
include/: buffdetector.h  mainwindow.h  mediaprocessor.h
src/: buffdetector.cpp  main.cpp  mainwindow.cpp  mediaprocessor.cpp
themes/: light.qss  moonlight.qss
ui/: mainwindow.ui
